# Throne

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  nekoray_version.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  routing_issue.yml
.github/workflows/: build-qv2ray-cmake.yml  build.yml
cmake/: QHotkey.cmake  myproto.cmake  nkr.cmake
cmake/linux/: linux.cmake
cmake/macos/: macos.cmake
cmake/windows/: windows.cmake
core/: .gitignore
core/cmd/nekobox_core/: go.mod  go.sum  main.go  server.go
core/protorpc/: .travis.yml  client.go  go.mod  go.sum  server.go  wire.go
core/protorpc/wire.pb/: wire.pb.go
core/server/: dispatch.go  go.mod  go.sum  ipc_unix.go  ipc_windows.go  main.go  naive.go  naive_stub.go  parentcheck.go  parentcheck_darwin.go  parentcheck_debug.go  parentcheck_linux.go  parentcheck_windows.go  privilege_linux.go  privilege_other.go  server.go  server_linux.go  server_windows.go  test_utils.go
core/server/internal/: country_helper.go  utils.go
core/server/ipc/: ipc_peer_darwin.go  ipc_peer_linux.go  ipc_unix.go  ipc_windows.go
core/server/parentcheck/: parentcheck.go  parentcheck_darwin.go  parentcheck_debug.go  parentcheck_linux.go  parentcheck_windows.go  pid.go
core/server/privilege/: privilege_linux.go  privilege_other.go
core/server/test_utils/: common.go  ip_test_utils.go  speedtest_utils.go  url_test_utils.go
core/updater/: go.mod  main.go  updater.go
include/api/: RPC.h  gRPC.h
include/configs/: ConfigBuilder.hpp  baseConfig.h  generate.h
include/configs/common/: DialFields.h  Outbound.h  TLS.h  multiplex.h  transport.h  utils.h  xrayMultiplex.h  xrayStreamSetting.h
include/configs/outbounds/: anyTLS.h  chain.h  custom.h  direct.h  extracore.h  http.h  hysteria.h  hysteria2.h  juicity.h  naive.h  shadowsocks.h  shadowtls.h  socks.h  ssh.h  tailscale.h  trojan.h  trusttunnel.h  tuic.h  vless.h  vmess.h  wireguard.h  xrayVless.h
include/configs/proxy/: AbstractBean.hpp  AnyTlsBean.hpp  ChainBean.hpp  CustomBean.hpp  ExtraCore.h  Preset.hpp  QUICBean.hpp  SSHBean.h  ShadowSocksBean.hpp  SocksHttpBean.hpp  Tailscale.hpp  TrojanVLESSBean.hpp  V2RayStreamSettings.hpp  VMessBean.hpp  WireguardBean.h  includes.h
include/configs/sub/: GroupUpdater.hpp  clash.hpp  warp.h
include/dataStore/: Database.hpp  Group.hpp  ProfileFilter.hpp  ProxyEntity.hpp  RouteEntity.h
include/database/: Database.h  DatabaseManager.h  GroupsRepo.h  ProfilesRepo.h  RoutesRepo.h  SettingsRepo.h
include/database/entities/: Group.h  Profile.h  RouteProfile.h  RouteRule.h
include/global/: ConfigItem.hpp  Configs.hpp  Const.hpp  CountryHelper.hpp  DataStore.hpp  DeviceDetailsHelper.hpp  GuiUtils.hpp  HTTPRequestHelper.hpp  NekoGui.hpp  NekoGui_ConfigItem.hpp  NekoGui_DataStore.hpp  NekoGui_Utils.hpp  Utils.hpp
include/stats/connections/: connectionLister.hpp
include/stats/traffic/: TrafficData.hpp  TrafficLooper.hpp
include/sys/: AutoRun.hpp  Process.hpp  UrlScheme.hpp
include/sys/linux/: LinuxCap.h  coreDump.h  desktopinfo.h  systemChecks.h
include/sys/windows/: eventHandler.h  vcCheck.h
include/ui/: mainwindow.h  mainwindow.ui
include/ui/group/: GroupItem.h  GroupSort.hpp  dialog_edit_group.h  dialog_edit_group.ui  dialog_manage_groups.h
include/ui/profile/: ProxyItem.h  ProxyItem.ui  dialog_edit_profile.h  dialog_edit_profile.ui  edit_advanced.h  edit_advanced.ui  edit_anytls.h  edit_anytls.ui  edit_chain.h  edit_custom.h  edit_custom.ui  edit_direct.h  edit_direct.ui  edit_extra_core.h  edit_extra_core.ui  edit_http.h  edit_http.ui  edit_hysteria.h  edit_hysteria.ui  edit_hysteria2.h  edit_hysteria2.ui  edit_juicity.h  edit_juicity.ui  edit_naive.h  edit_naive.ui  edit_quic.h  edit_quic.ui  edit_shadowsocks.h  edit_shadowsocks.ui  edit_shadowtls.h  edit_shadowtls.ui  edit_socks.h  edit_socks.ui  edit_socks_http.h  edit_ssh.h  edit_tailscale.h  edit_tailscale.ui  edit_trojan.h  edit_trojan.ui  edit_trojan_vless.h  (+13 more)
include/ui/setting/: Icon.hpp  RawRouteItem.h  RouteItem.h  RouteItem.ui  ThemeManager.hpp  dialog_basic_settings.h  dialog_basic_settings.ui  dialog_hotkey.h  dialog_hotkey.ui  dialog_manage_routes.h  dialog_manage_routes.ui  dialog_vpn_settings.h  dialog_vpn_settings.ui
include/ui/utils/: CustomChartView.h  DataViewHtmlGenerator.h  MyTableWidget.h  ProfilesTableFilterHeader.h  ProfilesTableModel.h  ProfilesTableVerticalHeader.h  ProfilesTableView.h  TrafficChart.h
res/: EmojiFont.qrc  EmojiFontLin.qrc  EmojiFontWin.qrc  MacOSXBundleInfo.plist  Throne.icns  Throne.qrc  neko.qrc  nekoray.icns
res/linux/: Throne.launcher.sh  org.throneproj.Throne.desktop  org.throneproj.Throne.metainfo.xml
res/theme/feiyangqingyun/: qss.qrc
res/translations/: fa_IR.ts  ru_RU.ts  zh_CN.ts
script/: build_deps_all.sh  build_go.sh  build_public_res.sh  build_qt_static_windows.bat  deploy_linux64.sh  deploy_linux64_system_qt.sh  deploy_macos.sh  deploy_windows.sh  deploy_windows64.sh  deploy_woa.sh  env_deploy.sh  pack_debian.sh  pack_debian_system_qt.sh  windows_installer.nsi
src/: main.cpp
src/api/: RPC.cpp  gRPC.cpp
src/configs/: ConfigBuilder.cpp  generate.cpp
src/configs/common/: DialFields.cpp  Outbound.cpp  TLS.cpp  multiplex.cpp  transport.cpp  utils.cpp  xrayMultiplex.cpp  xrayStreamSetting.cpp
src/configs/outbounds/: anyTLS.cpp  http.cpp  hysteria.cpp  hysteria2.cpp  juicity.cpp  naive.cpp  shadowsocks.cpp  shadowtls.cpp  socks.cpp  ssh.cpp  tailscale.cpp  trojan.cpp  trusttunnel.cpp  tuic.cpp  vless.cpp  vmess.cpp  wireguard.cpp  xrayVless.cpp
src/configs/proxy/: AbstractBean.cpp  Bean2CoreObj_box.cpp  Bean2Link.cpp  Json2Bean.cpp  Link2Bean.cpp
src/dataStore/: Database.cpp  Group.cpp  ProfileFilter.cpp  ProxyEntity.cpp  RouteEntity.cpp
src/database/: Database.cpp  DatabaseManager.cpp  GroupsRepo.cpp  ProfilesRepo.cpp  RoutesRepo.cpp  SettingsRepo.cpp
src/global/: Configs.cpp  CountryHelper.cpp  DeviceDetailsHelper.cpp  HTTPRequestHelper.cpp  NekoGui.cpp  Utils.cpp
src/sys/: AutoRun.cpp  Process.cpp  UrlScheme.cpp
src/ui/: mainwindow.cpp  mainwindow_grpc.cpp  mainwindow_rpc.cpp
(+88 files in other folders)
